[package]
name = "quiver-bdp-tokens"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]
license = "MIT"
repository = "https://github.com/TheEnbyperor/quiver"

[dependencies]
chrono = "0.4.31"
hmac = "0.12.1"
quiver-util = { path = "../util", version = "0.1" }
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = [] }
quiche = { git = "https://github.com/theenbyperor/quiche", rev = "09ee22073e4c0707d066287a2c4b32facd587da3", features = ["qlog", "boringssl-boring-crate"] }
byteorder = "1.5.0"
digest = "0.10.7"
subtle = "2.5.0"
serde = "1"
num_enum = "0.7.2"
chacha20poly1305 = { version = "0.10.1" }
