[package]
name = "quiver-h3"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]
description = "Implementation of RFC 9113 HTTP/3"
license = "MIT"
repository = "https://github.com/TheEnbyperor/quiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bitstream-io = "1.7.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = [] }
tokio-bitstream-io = "0.0.7"
quiver-qpack = { path = "../qpack" }
quiche-tokio = { path = "../quiche_tokio" }

[dev-dependencies]
hex = "0.4.3"
