[package]
name = "quiver-qpack"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]
description = "Implementation of RFC 9204 QPACK"
license = "MIT"
repository = "https://github.com/TheEnbyperor/quiver"

[dependencies]
async-trait = "0.1.74"
bitstream-io = "1.7.0"
phf = { version = "0.11.2", default-features = false }
phf_shared = "0.11.2"
tokio = { version = "1.33.0", features = ["io-util", "macros", "sync", "rt-multi-thread"] }
tokio-bitstream-io = "0.0.7"

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
phf_shared = "0.11.2"
