[package]
name = "quiche-tokio"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]
description = "Tokio async wrapper for Cloudflare Quiche"
license = "MIT"
repository = "https://github.com/TheEnbyperor/quiver"

[dependencies]
async-trait = "0.1.74"
libc = "0.2.150"
log = "0.4.20"
quiche = { git = "https://github.com/theenbyperor/quiche", rev = "ddbc75d221628570d13145289c489c8168f1ba6d", features = ["qlog", "boringssl-boring-crate"] }
#quiche = { path = "../../quiche/quiche", features = ["qlog", "boringssl-boring-crate"], version = "0.20"}
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["net", "macros", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
futures = "0.3.30"
nix = { version = "0.27.1", features = ["socket"] }
async-io = "2.2.2"

